# splice_attenuation_analysis

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  splice_attenuation_analysis.c
src/bcftools/: gff.c  gff.h
